<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bird Drop</string>

    <string name="loading">Loading</string>
    <string name="play">PLAY</string>
    <string name="levels">SELECT LEVEL</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>

    <string name="go">LAUNCH</string>
    <string name="clear">CLEAR</string>
    <string name="pause">Pause</string>
    <string name="resume">RESUME</string>
    <string name="restart">RESTART</string>
    <string name="menu">MENU</string>
    <string name="next">NEXT</string>
    <string name="retry">RETRY</string>
    <string name="close">CLOSE</string>

    <string name="victory">VICTORY!</string>
    <string name="failed">OUT OF BIRDS</string>
    <string name="score_value">Score %1$d</string>
    <string name="reward_value">+%1$d crystals</string>

    <string name="birds_label">Birds</string>
    <string name="devices_label">Devices</string>
    <string name="hint_plan">Tap the marked area to drop a device. Tap a device to remove it.</string>
    <string name="hint_ability">Tap anywhere: %1$s</string>
    <string name="hint_ability_used">Ability used</string>

    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>

    <string name="level_caption">%1$s · Level %2$d</string>

    <string name="privacy_url">https://birddropp.com/privacy-policy.html</string>
    <string name="support_url">https://birddropp.com/support.html</string>
</resources>
